fix for nav on tablet

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -196,6 +196,7 @@
 		ul li:hover ul {
 			background-color: fade(@color-swatch7, 95%);
 			@media @tablet {
+				margin: 10px 0 0;
 				border-bottom: 1px solid fade(@color-swatch4, 15%);
 				border-left: 1px solid fade(@color-swatch4, 15%);
 				border-right: 1px solid fade(@color-swatch4, 15%);
